# oxt-custom_dict

./: .gitmodules  README.md  main.py  pyproject.toml  requirements-dev.txt  run.bat  test.py  update_requirements.py  userinput.json
.github/workflows/: test.yml
oxt_generator/: README_extension_owner.txt  __init__.py  cli_app.py  file_generator.py  package.py  word_list.py
